# datalogic-rs

./: .gitignore  API.md  ARCHITECTURE.md  ARENA.md  ARENA_RFC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_OPERATORS.md  Cargo.toml  DEVELOPMENT.md  MIGRATION.md  README.md  SECURITY.md  V4_DESIGN_PROPOSAL.md  build-js.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proposal-arena.md  proposal-datetime.md  proposal-jmespath.md  proposal-jsonlogic.md  proposal-new-array-ops.md  proposal-pluggable-parser.md  proposal-rulebuilder.md  proposal-scope.md  proposal-token.md  proposal-value.md  proposal.md  test-wasm.cjs
.github/: CODEOWNERS  LAUNCH-PLAYBOOK.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
benches/: complex_bench.rs  jsonlogic_bench.rs
bindings/: BINDINGS.md
bindings/c/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/c/examples/: .gitignore  Makefile  compile-once-evaluate-many.c  custom-operator.c  getting-started.c
bindings/c/include/: datalogic.h
bindings/c/src/: builder.rs  data.rs  engine.rs  error.rs  lib.rs  rule.rs  session.rs  traced_session.rs
bindings/c/tests/: conformance.rs  smoke.rs
bindings/node/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
bindings/node/__test__/: apply.test.mjs  compile.test.mjs  config.test.mjs  custom-operators.test.mjs  data-handle.test.mjs  errors.test.mjs  object-bridge.test.mjs  session.test.mjs  thread-affinity.test.mjs  trace.test.mjs
bindings/node/examples/: compile-once-evaluate-many.mjs  custom-operator.mjs  getting-started.mjs
bindings/node/src/: conv.rs  data.rs  engine.rs  error.rs  lib.rs  session.rs
bindings/python/: .gitignore  Cargo.toml  README.md  datalogic_py.pyi  pyproject.toml  stubtest-allowlist.txt
bindings/python/examples/: compile_once_evaluate_many.py  custom_operator.py  getting_started.py
bindings/python/src/: conv.rs  data.rs  engine.rs  error.rs  lib.rs  session.rs
bindings/python/tests/: test_batch.py  test_compile.py  test_config.py  test_conformance.py  test_custom_operators.py  test_data_handle.py  test_equivalence.py  test_session.py  test_trace.py  test_typed_eval.py
bindings/wasm/: Cargo.toml  README.md  build.sh
bindings/wasm/examples/: compile-once-evaluate-many.mjs  custom-operator.mjs  getting-started.mjs
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: web.rs
crates/datalogic-rs/: CHANGELOG.md  Cargo.toml  README.md
crates/datalogic-rs/examples/: README.md  compile_once_evaluate_many.rs  configuration.rs  datetime_ops.rs  error_handling.rs  getting_started.rs  structured_objects.rs  thread_safety.rs  tracing.rs  zero_copy_input.rs
crates/datalogic-rs/fuzz/: Cargo.toml
crates/datalogic-rs/fuzz/fuzz_targets/: eval_str.rs
crates/datalogic-rs/src/: builder.rs  config.rs  eval_input.rs  lib.rs  logic_input.rs  node_serialize.rs  opcode.rs  operator.rs  parsed_data.rs  path.rs  result_output.rs  serde_bridge.rs  session.rs  top_level.rs  trace.rs
crates/datalogic-rs/src/arena/: mod.rs  singletons.rs
crates/datalogic-rs/src/arena/context/: mod.rs  reference.rs
crates/datalogic-rs/src/arena/value/: coercion.rs  conversion.rs  lookup.rs  mod.rs  strings.rs  traversal.rs
crates/datalogic-rs/src/compile/: missing.rs  mod.rs  operator.rs  path_segments.rs  walker.rs
crates/datalogic-rs/src/compile/optimize/: constant_fold.rs  cse.rs  dead_code.rs  helpers.rs  mod.rs  strength.rs
crates/datalogic-rs/src/engine/: dispatch.rs  mod.rs
crates/datalogic-rs/src/error/: kind.rs  mod.rs  path.rs  serde.rs
crates/datalogic-rs/src/node/: compile_ctx.rs  logic.rs  mod.rs  payload.rs  populate.rs  prelit.rs
crates/datalogic-rs/src/operators/: control.rs  error_handling.rs  flagd.rs  inspect.rs  logical.rs  missing.rs  mod.rs  string.rs  truthy.rs
crates/datalogic-rs/src/operators/arithmetic/: basic.rs  div_mod.rs  helpers.rs  min_max.rs  mod.rs  unary_math.rs
crates/datalogic-rs/src/operators/array/: filter.rs  helpers.rs  length.rs  map.rs  merge.rs  mod.rs  quantifiers.rs  reduce.rs  slice.rs  sort.rs
crates/datalogic-rs/src/operators/comparison/: loose.rs  mod.rs
crates/datalogic-rs/src/operators/datetime/: arith.rs  mod.rs
crates/datalogic-rs/src/operators/variable/: exists.rs  mod.rs  val.rs
crates/datalogic-rs/tests/: README.md  arc_test.rs  arena_operator_test.rs  basic_test.rs  compile_depth_test.rs  config_json_test.rs  config_test.rs  error_context_test.rs  error_serialization.rs  layout_test.rs  overflow_test.rs  property_test.proptest-regressions  property_test.rs  test_jsonlogic.rs  trace_test.rs  v5_api_test.rs
crates/datalogic-rs/tests/suites/: README.md  cse.json  index.json  structured-objects.json  type.json
crates/datalogic-rs/tests/suites/arithmetic/: plus.json
crates/datalogic-rs/tests/suites/array/: reduce.json
crates/datalogic-rs/tests/suites/flagd/: fractional.json  sem_ver.json
datalogic-wasm/: .npmignore  Cargo.toml  README.md  build.sh
datalogic-wasm/src/: lib.rs
datalogic-wasm/tests/: web.rs
docs/: book.toml  index.html  jsonlogic.js  main.js  operators.html  playground.html  (+2 more)
examples/web/: Cargo.toml
examples/web/src/: lib.rs
tools/benchmark/: .gitignore  BENCHMARK.md  BINDINGS-OVERHEAD.md  Cargo.toml  README.md
tools/benchmark/.cargo/: config.toml
tools/benchmark/boundary/: .gitignore  README.md  harness.mjs  render.py  run.sh  runner-c.c  runner-node.mjs  runner-php.php  runner-python.py  runner-wasm.mjs
tools/benchmark/boundary/runner-dotnet/: Boundary.csproj  Program.cs
tools/benchmark/boundary/runner-go/: go.mod  main.go
tools/benchmark/boundary/runner-jvm/: Boundary.java
tools/benchmark/boundary/workloads/: array100.data.json  array100.expected.json  array100.rule.json  eligibility.data.json  eligibility.expected.json  eligibility.rule.json  generate.py  simple.data.json  simple.rule.json
tools/benchmark/runners/: node-runner.js  package-lock.json  package.json
tools/benchmark/src/: lib.rs  macro_suites.rs
wasm/: Cargo.toml  README.md  build.sh  publish.sh
wasm/src/: lib.rs
(+671 files in other folders)
