[package]
name = "datalogic-rs"
version = "5.0.0"
edition = "2024"
exclude = [".DS_Store", "/target", ".vscode", ".github", "/docs", "/wasm", "/ui", "/tools"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "A fast, type-safe Rust implementation of JSONLogic for evaluating logical rules as JSON. Perfect for business rules engines and dynamic filtering in Rust applications."
readme = "README.md"
homepage = "https://github.com/GoPlasmatic/datalogic-rs"
repository = "https://github.com/GoPlasmatic/datalogic-rs"
keywords = ["rules", "engine", "json", "logic"]
categories = ["data-structures", "development-tools", "parsing"]

[features]
# Default build is serde_json-free. The `compat` feature bridges
# `serde_json::Value` to the v5 `DataValue` / `OwnedDataValue` core and
# provides the `LegacyApi` shims for 4.x callers; opt in with
# `features = ["compat"]` if you need either.
default = []
compat = ["dep:serde_json", "datavalue/serde_json"]
# `preserve` enables structure-preservation (templating) mode, where
# multi-key objects in compiled rules become output-shaping templates
# (`Engine::builder().preserve_structure(true)`). The 4.x JSONLogic
# `preserve` *operator* was removed in v5: literal scalars / arrays
# work inline already, and templated objects belong in
# preserve_structure mode.
preserve = []
datetime = ["datavalue/datetime", "dep:chrono"]
trace = ["compat"]
ext-string = []
ext-array = []
ext-control = []
error-handling = []
ext-math = []
wasm = ["datetime", "trace", "preserve"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"], optional = true }
datavalue = { version = "0.2", package = "datavalue-rs", features = ["serde"] }
bumpalo = { version = "3", features = ["collections"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"

# Examples that depend on opt-in features. With `default = []`, these only
# build when the user passes the matching `--features` (or `--all-features`).
[[example]]
name = "structured_objects"
required-features = ["preserve"]

[[example]]
name = "getting_started"
required-features = ["preserve"]

[[example]]
name = "error_handling"
required-features = ["error-handling"]

[[example]]
name = "tracing"
required-features = ["trace"]

[[example]]
name = "datetime_ops"
required-features = ["datetime"]

[[example]]
name = "migrating_from_v4"
required-features = ["compat"]

# Dev-only benchmark harness. Lives outside `examples/` so it doesn't
# ship with the published crate. `required-features = ["compat"]` because
# the harness reads serde_json test suites (dev-dependencies are not
# visible to `[[bin]]` targets, but optional `[dependencies]` are once
# enabled via a feature). Build/run locally with:
#   cargo run --release --bin benchmark --features compat
[[bin]]
name = "benchmark"
path = "tools/benchmark.rs"
required-features = ["compat"]
