[workspace]
resolver = "3"
members = [
    "packages/core",
    "packages/benchmark",
]
# `packages/wasm` defines its own `[workspace]` so wasm-pack can apply its
# WASM-specific `[profile.release]` (opt-level "z", lto, panic = "abort")
# without contaminating the rest of the tree. `packages/ui` is a Node
# package and is invisible to Cargo regardless.
exclude = [
    "packages/wasm",
    "packages/ui",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
repository = "https://github.com/GoPlasmatic/datalogic-rs"
