[workspace]
resolver = "3"
members = [
    "packages/core",
    "tools/benchmark",
]
# `packages/wasm` defines its own `[workspace]` so wasm-pack can apply its
# WASM-specific `[profile.release]` (opt-level "z", lto, panic = "abort")
# without contaminating the rest of the tree. `packages/python` and
# `packages/c` are excluded so contributors don't need a Python toolchain
# or have to wait on cbindgen+cdylib codegen just to run `cargo test
# --workspace --all-features` against core. `packages/ui` is a Node
# package and is invisible to Cargo regardless.
exclude = [
    "packages/wasm",
    "packages/python",
    "packages/c",
    "packages/ui",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
repository = "https://github.com/GoPlasmatic/datalogic-rs"

# `lto = "fat"` + `codegen-units = 1` lets the compiler propagate the
# load-bearing `#[inline(always)]` decisions across crate/CGU boundaries
# in the dispatch hot path. The WASM workspace defines its own
# `[profile.release]` so it is unaffected.
[profile.release]
lto = "fat"
codegen-units = 1
# Line tables let cargo-flamegraph / samply / Instruments resolve frame
# names without bloating the binary much. Comment out for a strip-only
# release build.
debug = "line-tables-only"

[profile.bench]
inherits = "release"
