[package]
name = "datalogic-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for datalogic-rs JSONLogic engine"
license = "Apache-2.0"
repository = "https://github.com/GoPlasmatic/datalogic-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
datalogic-rs = { path = ".." }
wasm-bindgen = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
