[package]
name = "datalogic-wasm"
version = "4.0.12"
edition = "2024"
description = "WebAssembly bindings for datalogic-rs JSONLogic engine"
license = "Apache-2.0"
repository = "https://github.com/GoPlasmatic/datalogic-rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
datalogic-rs = { path = "..", features = ["wasm"] }
wasm-bindgen = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
