[build-system]
# Pin the maturin floor inside the build system, but the upper bound lives
# in the release workflow's `maturin-version:` so wheel builds stay
# reproducible across action upgrades. 1.8 is the floor for PEP 639
# `license-files` support (the release workflow pins 1.13.3).
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
# Follows the `datalogic-<lang>` naming convention used for every
# language binding (`datalogic-rs` on crates.io, `datalogic-py` on PyPI,
# `@goplasmatic/datalogic-wasm` and `@goplasmatic/datalogic-node` on npm).
name = "datalogic-py"
version = "5.1.0"
description = "JSONLogic (json-logic) rules engine for Python — native Rust core, compile-once/evaluate-many, identical semantics across Python, Node.js, WASM, Go, Java, .NET, PHP, and Rust."
readme = "README.md"
requires-python = ">=3.10"
# PEP 639 SPDX expression + license-files: maturin embeds the matched
# files in the wheel's `.dist-info/licenses/`. `LICENSE` here is a
# symlink to the repo-root LICENSE (same convention as `bindings/wasm`),
# so the wheel ships the actual license text, not just the metadata tag.
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Harishankar Narayanan", email = "nharishankar@gmail.com" },
]
keywords = ["jsonlogic", "json-logic", "rules-engine", "business-rules", "feature-flags", "openfeature", "flagd", "expression-engine"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/GoPlasmatic/datalogic-rs"
Repository = "https://github.com/GoPlasmatic/datalogic-rs"
Documentation = "https://goplasmatic.github.io/datalogic-rs/python/installation.html"
Issues = "https://github.com/GoPlasmatic/datalogic-rs/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.maturin]
# `module-name` MUST match the `[lib] name` in Cargo.toml — this is how
# maturin picks the symbol name the produced .so exports. Python's
# distribution-vs-import naming separation lets PyPI carry `datalogic-py`
# (hyphenated, convention-compliant) while the import is `datalogic_py`
# (Python doesn't allow hyphens in module names).
module-name = "datalogic_py"
# `abi3` strips the per-CPython-minor wheel build. With
# pyo3 features = ["abi3-py310"] one wheel per (os, arch) covers 3.10+.
features = ["pyo3/extension-module"]
# Strip the .so to keep wheel size down; debug info isn't useful at the
# Python boundary anyway.
strip = true
