[package]
name = "datalogic-rs"
version = "5.1.0"
edition.workspace = true
# Floor matches edition 2024 (stable in 1.85). Bump deliberately when a
# newer language feature is actually needed; downstream pinning depends on
# this staying conservative. Requires `datavalue-rs >= 0.2.3`: 0.2.0 and
# earlier used let-chains (would push this floor to 1.88), and 0.2.2 and
# earlier printed whole floats outside i64's exact range through a
# saturating cast — `float_to_str`'s fast path mirrors the fixed Display
# and would break byte-parity against them.
rust-version = "1.85"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/GoPlasmatic/datalogic-rs"
documentation = "https://docs.rs/datalogic-rs"
description = "High-performance JSONLogic (json-logic) rules engine and sandboxed expression evaluator in Rust — one core, official bindings for Node.js, WASM, Python, Go, Java, .NET, and PHP. Compile once, evaluate in nanoseconds."
readme = "README.md"
keywords = ["jsonlogic", "json-logic", "rules-engine", "business-rules", "feature-flags"]
categories = ["parser-implementations", "wasm", "development-tools"]
exclude = [".DS_Store"]

# docs.rs builds with the default feature set unless told otherwise. Our
# `default = []` means a vanilla docs.rs build would hide `serde_json`,
# `templating`, `datetime`, `trace`, and the `ext-*` / `flagd` operator
# surface, so we turn everything on. The `--cfg docsrs` flag pairs with the
# `cfg_attr(docsrs, doc(cfg(...)))` annotations on feature-gated public
# items in `lib.rs` — that gives each item a "Available on crate feature
# X only" badge in the rendered docs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Empty default: the crate is `serde_json`-free out of the box. Opt-in
# features below add interop, optional operators, or templating — see
# `serde_json`, `templating`, `datetime`, `trace`, `error-handling`,
# `ext-string`, `ext-array`, `ext-control`, `ext-math`, `flagd`. Keeping
# `default = []` means a minimal build pulls only the JSONLogic baseline
# operators and no optional dependencies.
default = []
# `serde_json` enables `&serde_json::Value` interop and the typed
# `&T: Serialize` / `T: DeserializeOwned` paths through `EvalInput` /
# `IntoLogic` / `FromDataValue`. Replaces the v5-pre-release `compat`
# feature, which mixed interop with v4 deprecation shims; the shims are
# gone and the feature is now named for what it enables.
serde_json = ["dep:serde_json", "datavalue/serde_json"]
# `templating` enables templating mode, where multi-key objects in compiled
# rules become output-shaping templates
# (`Engine::builder().with_templating(true)`). The 4.x JSONLogic `preserve`
# *operator* was removed in v5: literal scalars / arrays work inline
# already, and templated objects belong in templating mode.
templating = []
datetime = ["datavalue/datetime", "dep:chrono"]
trace = ["serde_json"]
ext-string = []
ext-array = []
ext-control = []
error-handling = []
ext-math = []
# flagd-compat: enables the JSONLogic operators specified by the
# OpenFeature flagd in-process provider on top of the JSONLogic
# baseline:
#   - `fractional` — deterministic murmurhash3 percentage bucketing
#                    (vendored hash, no external dep)
#   - `sem_ver`    — semantic version comparison with the flagd-spec
#                    normalizations (strip v/V prefix, pad partials,
#                    coerce numeric input, drop build metadata). Pulls
#                    in the `semver` crate, kept optional via dep:.
flagd = ["dep:semver"]
# JS-host clock for the `now` operator on `wasm32-unknown-unknown`
# (browsers, Node, Deno, Workers): forwards to `chrono/wasmbind`, which
# reads time via `js_sys::Date`. Strictly opt-in — wasmbind links
# `__wbindgen_placeholder__` imports only a JS host provides, so enabling
# it unconditionally breaks non-JS wasm runtimes (wasmtime, wazero,
# Chicory); that was issue #47, fixed in v4.0.19 as the opt-in `wasm`
# feature and lost in the v5 rewrite. Weak dep (`chrono?`): a no-op
# unless `datetime` also enables chrono, and inert on non-wasm targets
# (chrono target-gates the js-sys/wasm-bindgen deps internally). Without
# this feature, `now` on wasm32-unknown-unknown traps ("time not
# implemented on this platform"); on WASI chrono uses the OS clock and
# this feature is unnecessary.
wasm-clock = ["chrono?/wasmbind"]

[dependencies]
# Floors below are the **minimum** versions we actually compile against.
# CI runs `cargo +nightly update -Z minimal-versions` to enforce this —
# bump deliberately when a newer dep API is taken, otherwise the
# minimal-versions resolver may pick a too-old variant that lacks the
# feature we use.
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"], optional = true }
datavalue = { version = "0.2.3", package = "datavalue-rs", features = ["serde"] }
bumpalo = { version = "3.20", features = ["collections"] }
# Number -> string rendering on the `cat` / string-coercion hot path
# (`arena::value::strings`). Both render digits without the `core::fmt`
# machinery; ryu is used only where its output provably matches `Display`
# (see `float_to_str`).
itoa = "1"
ryu = "1"
# Inline-capacity frame stack for `ContextStack`, so iterator operators
# (map/filter/reduce/quantifiers) never touch the heap at typical nesting
# depths. Floor 1.6.1 avoids RUSTSEC-2021-0003 under minimal-versions.
smallvec = "1.6.1"
# Used by the `flagd` feature's `sem_ver` operator. `default-features =
# false` strips `serde` / `serde1` integration we don't need — the
# operator only uses `Version::parse` + `PartialOrd`.
semver = { version = "1.0", default-features = false, optional = true }
# Safe self-referential structs for `node::prelit::PreLit`: a compiled
# composite literal owns its string/child storage together with the
# pre-built arena-shaped `DataValue` view that borrows from it, so the
# dispatch literal path returns a borrow instead of deep-converting the
# literal into the per-evaluation arena. Chosen over an embedded
# `bumpalo::Bump` in `Logic` (a `Bump` is `!Sync` by type and would cost
# `Logic: Sync`) and over hand-rolled self-reference (the crate is
# `#![forbid(unsafe_code)]`; `self_cell` keeps the unsafe outside).
self_cell = "1.2.2"

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }
futures = "0.3.32"
serde_json = "1.0.150"
# Property-based tests (`tests/property_test.rs`). Floor kept current for
# the same minimal-versions reason as [dependencies] above.
proptest = "1.11"

# Examples that depend on opt-in features. With `default = []`, these only
# build when the user passes the matching `--features` (or `--all-features`).
[[example]]
name = "structured_objects"
required-features = ["templating"]

[[example]]
name = "getting_started"
required-features = ["templating"]

[[example]]
name = "error_handling"
required-features = ["error-handling"]

[[example]]
name = "tracing"
required-features = ["trace"]

[[example]]
name = "datetime_ops"
required-features = ["datetime"]

[[example]]
name = "zero_copy_input"
# `serde_json` enables the `&serde_json::Value` shape; the example shows
# all input shapes side by side so it needs the gated impl too.
required-features = ["serde_json"]
