[package]
name = "datalogic-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dev-only benchmark harness for datalogic-rs (single-engine and cross-library)."
publish = false

[dependencies]
# Enable every operator-set feature so the dlrs:* columns in `bin/compare.rs`
# can run every suite. Without these, suites exercising `try`, `length`,
# `sort`, `datetime`, etc. fall through to ERR cells — the engine *can*
# do them, the bench just hadn't opted in. When a new operator-family
# feature lands in the core, add it HERE TOO or its suites will silently
# ERR on the dlrs:engine column (that's exactly how `flagd` was missing
# until 2026-07: flagd/*.json showed ERR for the native engine while the
# WASM column ran them). The dlrs:wasm column separately reflects the
# feature set baked into `bindings/wasm/Cargo.toml` (every family since
# the 2026-05 flatten). No `wasm-clock` here: this crate is native-only.
datalogic-rs = { path = "../../crates/datalogic-rs", features = [
    "serde_json",
    "templating",
    "datetime",
    "error-handling",
    "ext-string",
    "ext-array",
    "ext-control",
    "ext-math",
    "flagd",
] }
serde_json = "1.0"
bumpalo = "3"

# Native Rust competitor crates. Each gates one optional dep + one
# `Subject` impl in `src/bin/compare.rs`. Off by default so the basic
# matrix (datalogic-rs tiers + Node subjects) doesn't pull them in.
jsonlogic-rs = { version = "0.5", optional = true }

# `compare` binary subjects are gated so the default build doesn't pull in
# every other JSONLogic crate. Add a feature per subject and wire it in
# `src/bin/compare.rs`.
[features]
default = []
subject-jsonlogic-rs = ["dep:jsonlogic-rs"]

[[bin]]
name = "self"
path = "src/bin/self.rs"

# Per-binding boundary benchmark, core-crate runner. Workloads + the
# other runtimes' runners live in `boundary/` — see boundary/README.md.
[[bin]]
name = "boundary_core"
path = "src/bin/boundary_core.rs"

[[bin]]
name = "compare"
path = "src/bin/compare.rs"

# Sampling-profiler feeder (samply / Instruments): hammers one macro suite
# in a hot loop so the profile shows only that suite's evaluation path.
[[bin]]
name = "profile_macro"
path = "src/bin/profile_macro.rs"
